--- a/R_notes.Rmd
+++ b/R_notes.Rmd
@@ -3,12 +3,8 @@ title: "R Notes"
 author: "Xiangming Zeng"
 date: "`r Sys.Date()`"
 output: 
-  rmarkdown::html_vignette:
+  rmarkdown::html_document:
     toc: true
-vignette: >
-  %\VignetteIndexEntry{Vignette Title}
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
 ---
 This is my personal note for learning R. A lot of contents come from online resources.
 
