--- a/_drafts/python_notes2.ipynb
+++ b/_drafts/python_notes2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Notes from <Building Machine Learning System with Python>"
+    "## Notes from [Hackerrank](www.hackerrank.com) and [Python for everybody](https://www.coursera.org/specializations/python)"
    ]
   },
   {
