--- a/_posts/2016-03-30-test.md
+++ b/_posts/2016-03-30-test.md
@@ -5,7 +5,7 @@ tags: hello jekyll theme
 eye_catch: http://jekyllrb.com/img/logo-2x.png
 ---
 
-$\sum_i^n x_i = Y$
+$$\sum_i^n x_i = Y$$
 
 ```python
 import numpy as np
