update previous posts

--- a/_posts/2015-09-11-R-notes.md
+++ b/_posts/2015-09-11-R-notes.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: R notes
-tags: R notes
+tags: R
 ---
 This is my personal note for learning R. A lot of contents come from online resources, such as Coursera and Datacamp.
 
