--- a/_posts/2016-03-03-git.md
+++ b/_posts/2016-03-03-git.md
@@ -5,3 +5,12 @@ tags: git
 ---
 
 [Basic git commands](https://confluence.atlassian.com/bitbucketserver/basic-git-commands-776639767.html)
+
+[How to merge other's branch into mine?](http://stackoverflow.com/questions/11582894/how-do-i-merge-another-developers-branch-into-mine)
+
+```
+git remote add otherrep uriToOtherRep
+git fetch otherrep
+git merge otherrep/branchname
+```
+
