--- a/_posts/2016-01-04-SQL.md
+++ b/_posts/2016-01-04-SQL.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Notes for SQL
-tags: SQL
+tags: SQL, CheetSheets
 ---
 
 * [SQL in one page](http://www.cheat-sheets.org/sites/sql.su/)
