docs: add SQL examples

--- a/_posts/2016-01-04-SQL.md
+++ b/_posts/2016-01-04-SQL.md
@@ -7,3 +7,4 @@ tags: SQL CheetSheets
 * [SQL in one page](http://www.cheat-sheets.org/sites/sql.su/)
 * [SQL Cheat Sheet](http://www.sql-tutorial.net/sql-cheat-sheet.pdf)
 * [SQL vs NoSQL](https://www.mongodb.com/nosql-explained)
+* [SQL examples](http://www.itl.nist.gov/div897/ctg/dm/sql_examples.htm)
